fixed button alignment

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@1,600&display=swap');
 
+.button-align{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
 
 body {
     margin: 0;
